# happy-phone-llm

./: .gitignore  GEMINI.md  README.md  calculate_ffn_expected.py
example_app/: pubspec.yaml
example_app/android/app/: build.gradle.kts
example_app/ios/: Podfile
example_app/lib/: main.dart
example_app/linux/runner/: my_application.cc
happy_phone_llm_flutter/: ffigen.yaml  pubspec.yaml
happy_phone_llm_flutter/lib/: happy_phone_llm_flutter.dart
happy_phone_llm_flutter/lib/src/: happy_phone_llm_bindings.dart  libhappy_phone_llm_engine.dylib
happy_phone_llm_flutter/test/: happy_phone_llm_flutter_test.dart
inference/: CMakeLists.txt
inference/cli/: CMakeLists.txt  main.cpp
inference/engine/: CMakeLists.txt  capi.cpp  capi.h  engine.cpp  engine.h
inference/gguf/: CMakeLists.txt  gguf.cpp  gguf.h
inference/kernel/: CMakeLists.txt  attention.cpp  attention.h  ffn.cpp  ffn.h  kernel.cpp  kernel.h  matrix_multiplication.cpp  matrix_multiplication.h  rmsnorm.cpp  rmsnorm.h
inference/tensor/: CMakeLists.txt  tensor.cpp  tensor.h
inference/test/: CMakeLists.txt  engine_test.cpp  gguf_test.cpp  tensor_test.cpp
model/: .gitignore  convert_to_gguf.py  create_dummy_gguf.py  download_qwen.py  requirements.txt  setup_env.sh
spec/: init.md  research-001.md  research-002.md  research-003-exec.md  research-003.md  research-004.md
